--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,10 @@
 kotlin.code.style=official
+openApi.version=7.6.0
+detekt.version=1.23.8
+dokka.version=2.0.0
+kotlin.version=2.2.0
+kotlinter.version=5.1.1
+spring-boot.version=3.5.3
+git-properties.version=2.5.2
+kotest-extensions-spring.version=1.1.3
+
